# PathTracing

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
Res/Materials/: BunnyMicrofacet.json  BunnyPhong.json  CornellBoxOriginal.json  CornellBoxOriginalWhitted.json  CornellBoxSphere.json  CornellBoxSphereWhitted.json  Dragon.json  Plates.json  Spheres.json
Src/: Renderer.cpp  Renderer.h  main.cpp
Src/Camera/: Camera.cpp  Camera.h
Src/Exception/: ArgsException.h
Src/GUI/: GUI.cpp  GUI.h
Src/Image/: Image.cpp  Image.h
Src/Integrator/: DirectIlluminationIntegrator.cpp  DirectIlluminationIntegrator.h  IndirectIlluminationIntegrator.cpp  IndirectIlluminationIntegrator.h  Integrator.cpp  Integrator.h  RandomWalkIntegrator.cpp  RandomWalkIntegrator.h  WhittedIntegrator.cpp  WhittedIntegrator.h
Src/PostProcessing/: ToneMap.h
Src/PostProcessing/ToneMapTypes/: ClampToneMap.cpp  ClampToneMap.h  ReinhardToneMap.cpp  ReinhardToneMap.h
Src/Sampler/: GGX.cpp  GGX.h  LightSampler.cpp  LightSampler.h  Sampler.cpp  Sampler.h  Sampling.h
Src/Scene/: Scene.cpp  Scene.h
Src/Scene/Light/: AreaLight.cpp  AreaLight.h  Light.h  PointLight.cpp  PointLight.h
Src/Scene/Shape/: Shape.h  SurfaceIntersection.h
Src/Scene/Shape/BxDF/: BlinnPhongBRDF.cpp  BlinnPhongBRDF.h  BxDF.cpp  BxDF.h  ConductorBxDF.cpp  ConductorBxDF.h  DielectricBxDF.cpp  DielectricBxDF.h  LambertianDiffuseBRDF.cpp  LambertianDiffuseBRDF.h  PhongBRDF.cpp  PhongBRDF.h
Src/Utility/: CLIParser.h  Math.h  Ray.h
